Paradox Driver NEWS - User visible changes.

2020-07-07 Fixed SQL State code and SQL Exception types. Added a possibility to use fixed values in SELECT clause.
2020-07-05 Added comment support.
2020-07-03 Added ResultSet fetch direction support. Added a better type conversion.
2020-07-02 Added left, right and cross join support.
2020-06-30 Removed field parse when field is not to be load.
2020-06-28 Added table join support.
2020-06-26 Review all database and table metadata and fixed various memory and performances issues.
2020-06-25 Rewrite the code for all BLOB and CLOB types.
2020-06-21 Added schema support in SQL and queries.
2020-06-20 Added BCD file type support.
2020-06-19 Added Graph, OLE and Formatted Memo types.
2020-06-18 Added encrypted file support.
2020-06-17 Fixed the charset support.
2016-07-06 Fixed minor bugs and added unit tests.
2016-06-27 Added JavaDoc documentation.
2016-06-22 New 1.2 release with memo file type support.

-----

Copyright (C) 2016 Leonardo Alves da Costa.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.  This file is offered as-is,
without warranty of any kind.